--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"/>
-    <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap-theme.min.css"/>
+    <link rel="stylesheet" type="text/css" href="/doc/stylesheets/bootstrap-theme.min.css"/>
     <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css"/>
 
     <!--[if lt IE 9]>
@@ -24,7 +24,7 @@
         <ul class="nav navbar-nav">
 	  {% for page in site.pages %}
 	    {% if page.url != "/index.html" %}
-	      <li><a href="{{page.url}}">{{page.title}}</a></li>
+	      <li><a href="/doc{{page.url}}">{{page.title}}</a></li>
 	    {% endif %}
 	  {% endfor %}
 	</ul>
