--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
   <body id="gravity-platform-docs">
     <header class="navbar navbar-default">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Gravity‑Platform Documentation</a>
+        <a class="navbar-brand" href="/doc">Gravity‑Platform Documentation</a>
       </div>
       <div class="navbar-collapse">
         <ul class="nav navbar-nav">
