--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     <div id="wrap">
       <header class="navbar navbar-default">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">Gravity‑Platform Documentation</a>
+          <a class="navbar-brand" href="/doc/">Gravity‑Platform Documentation</a>
         </div>
         <div class="navbar-collapse">
           <ul class="nav navbar-nav">
