--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,9 +24,11 @@
         </div>
         <div class="navbar-collapse">
           <ul class="nav navbar-nav">
-            {% for page in site.pages %}
-              {% if page.url != "/index.html" %}
-                <li><a href="/doc{{page.url}}">{{page.title}}</a></li>
+            {% for node in site.pages %}
+              {% if node.url != "/index.html" %}
+                {% if node.path != page.path %}
+                  <li><a href="/doc{{node.url}}">{{node.title}}</a></li>
+                {% endif %}
               {% endif %}
             {% endfor %}
           </ul>
