Split nav into two parts (top and left)
I uses the pages bundle so now all the real pages are now in source/_pages. I had to do some cleanup and resort to a simple redirect hack in index.html.

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -53,22 +53,7 @@
 </head>
 <body>
 <div class="row">
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a href="/index.html" class="navbar-brand">
-                    <img src="http://cdn.nova.scapp.io/img/sc_logo.png" alt="swisscom">
-                </a>
-            </div>
-            <div class="navbar-collapse collapse" id="navbar-main">
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="" target="_top">About</a>
-                    </li>
-                </ul>
-
-            </div>
-        </div>
-    </nav>
+    {% include 'nav_top.html.twig' %}
 </div>
 <div class="row"></div>
 <div class="col-sm-4 col-lg-2 sc-navbar-vert">
