added some very nice glyphicons

--- a/source/_partials/nav_top.html.twig
+++ b/source/_partials/nav_top.html.twig
@@ -9,12 +9,24 @@
             <ul class="nav navbar-nav">
 {% for item in page.menu %}
 {% if item.slug != 'doc' %}
-                <li><a href="/{{ item.slug }}">{{ item.title }}</a></li>
+                <li>
+                    <a href="/{{ item.slug }}">
+                        {% if item.slug == "api" %}
+                        <span class="picto-api" ></span>
+                        {% elseif item.slug == "guides" %}
+                        <span class="picto-book" ></span>
+                        {% elseif item.slug == "ops" %}
+                        <span class="picto-settings" ></span>
+                        {% else %}
+                            <span class="picto-{{ item.slug }}" ></span>
+                        {% endif %}
+                        {{ item.title }}</a>
+                </li>
 {% endif %}
 {% endfor %}
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="" target="_top">About</a></li>
+                <li><a href="" target="_top"><span class="picto-info"></span>About</a></li>
             </ul>
 
         </div>
