--- a/source/_partials/nav_top.html.twig
+++ b/source/_partials/nav_top.html.twig
@@ -5,6 +5,11 @@
                 <img src="http://cdn.nova.scapp.io/img/sc_logo.png" alt="swisscom">
             </a>
         </div>
+        <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
         <div class="navbar-collapse collapse" id="navbar-main">
             <ul class="nav navbar-nav">
 {% for item in page.menu %}
