added favicon and indented code

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -16,7 +16,7 @@
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-
+    <link rel="icon" type="image/png" href="../images/favicon.ico">
     <link rel="apple-touch-startup-image" href="{{ site.url }}/images/jackson/2048x2048.png">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
