--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -27,10 +27,6 @@
             background-color: inherit;
         }
     </style>
-    {% block head_styles %}
-    {% endblock %}
-    {% block head_scripts %}
-    {% endblock %}
 </head>
 <body>
 <div class="row">
@@ -38,7 +34,7 @@
 </div>
 <div class="row"></div>
 {% if page.slug != 'doc' %}
-<div class="col-sm-4 col-lg-2 sc-navbar-vert">
+<div class="col-sm-4 col-lg-2">
     {% include 'nav_vert.html.twig' %}
 </div>
 {% endif %}
@@ -46,7 +42,6 @@
     <div class="span8">
         {% block content_wrapper %}{% block content %}{% endblock %}{% endblock %}
     </div>
-    <hr>
 </div>
 
 </div>
