--- a/source/_partials/nav_top.html.twig
+++ b/source/_partials/nav_top.html.twig
@@ -14,12 +14,17 @@
             <ul class="nav navbar-nav">
                 {% for item in page.menu %}
                 {% if item.slug != 'doc' %}
-                                <li>
-                                    <a href="/{{ item.slug }}">
-                                        {% set navUnit = item.title | split('$') %}
-                                            <span class="{{ navUnit[1] }}" ></span>
-                                        {{ navUnit[0] }}</a>
-                                </li>
+                    <li
+                    {% if page.slug == item.slug %}
+                            class="active"
+                    {% endif %}
+                    >
+                        <a href="/{{ item.slug }}">
+                            {% set navUnit = item.title | split('$') %}
+                                <span class="{{ navUnit[1] }}" ></span>
+                            {{ navUnit[0] }}
+                        </a>
+                    </li>
                 {% endif %}
                 {% endfor %}
             </ul>
