--- a/source/css/style.css
+++ b/source/css/style.css
@@ -5,14 +5,6 @@ h4 small
     color: #888;
 }
 
-.mainContent, footer.container {
-}
-
-footer.container {
-    margin-top: 30px;
-    padding: 30px 0;
-    border-top: 1px dashed #aaa;
-}
 
 .footer-bottom {
     position: fixed;
@@ -29,4 +21,8 @@ footer.container {
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
         padding-bottom: 40px;
     }
+}
+
+.panel-body {
+    padding: 0px;
 }
