fixed responsive collapsed navbar

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -28,7 +28,7 @@
         }
     </style>
 </head>
-<body>
+<body style="margin-top: 70px;">
 <div class="row">
     {% include 'nav_top.html.twig' %}
 </div>
