--- a/source/_partials/nav_top.html.twig
+++ b/source/_partials/nav_top.html.twig
@@ -4,12 +4,12 @@
             <a href="/doc" class="navbar-brand">
                 <img src="http://cdn.nova.scapp.io/img/sc_logo.png" alt="swisscom">
             </a>
+            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main" aria-expanded="false">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
         </div>
-        <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
         <div class="navbar-collapse collapse" id="navbar-main">
             <ul class="nav navbar-nav">
                 {% for item in page.menu %}
@@ -29,7 +29,14 @@
                 {% endfor %}
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="" target="_top"><span class="picto-info"></span>About</a></li>
+                <li class="{% if page.slug == "about" %}
+                            active
+                        {% endif %}
+                        ">
+                    <a href="" target="_top"><span class="picto-info">
+                        </span>About
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
