--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -10,6 +10,7 @@
     <link href="{{ site.url }}/components/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css"/>
     <link href="//cdn.nova.scapp.io/css/comstrap.min.css" rel="stylesheet" type="text/css"/>
     <link href="//cdn.nova.scapp.io/css/comstrap-theme.min.css" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="{{ site.url }}/components/highlightjs/styles/github.css" />
     <link href="{{ site.url }}/css/style.css" rel="stylesheet" type="text/css"/>
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -58,5 +59,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="{{ site.url }}/components/jquery/jquery.min.js"><\/script>')</script>
 <script src="http://cdn.nova.scapp.io/js/comstrap.min.js"></script>
+<script src="{{ site.url }}/components/highlightjs/highlight.pack.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
