--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -29,37 +29,36 @@
         }
     </style>
 </head>
-<body style="margin-top: 70px;">
-<div class="row">
+<body>
     {% include 'nav_top.html.twig' %}
-</div>
-<div class="row"></div>
-{% if page.slug != 'doc' %}
-<div class="col-sm-4 col-lg-2">
-    {% include 'nav_vert.html.twig' %}
-</div>
-{% endif %}
-<div class="col-sm-8 col-lg-10 sc-main-content">
-    <div class="span8">
-        {% block content_wrapper %}{% block content %}{% endblock %}{% endblock %}
-    </div>
-</div>
-
-</div>
-
-<footer class="footer-bottom">
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-xs-12">
-                {{ "now"|date("Y") }} - Swisscom AG - {{ site.title }}
+        <div class="row"></div>
+            {% if page.slug != 'doc' %}
+                <div class="col-sm-2 col-lg-1 sc-navbar-vert">
+                    {% include 'nav_vert.html.twig' %}
+                </div>
+            {% endif %}
+            <div class="col-sm-10 col-lg-11 sc-main-content">
+                <div class="span8">
+                    {% block content_wrapper %}{% block content %}{% endblock %}{% endblock %}
+                </div>
             </div>
         </div>
     </div>
-</footer>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="{{ site.url }}/components/jquery/jquery.min.js"><\/script>')</script>
-<script src="http://cdn.nova.scapp.io/js/comstrap.min.js"></script>
-<script src="{{ site.url }}/components/highlightjs/highlight.pack.js"></script>
-<script>hljs.initHighlightingOnLoad();</script>
+
+    <footer class="footer-bottom">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xs-12">
+                    {{ "now"|date("Y") }} - Swisscom AG - {{ site.title }}
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="{{ site.url }}/components/jquery/jquery.min.js"><\/script>')</script>
+    <script src="http://cdn.nova.scapp.io/js/comstrap.min.js"></script>
+    <script src="{{ site.url }}/components/highlightjs/highlight.pack.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
