--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -39,7 +39,10 @@
             {% endif %}
             </div>
             <div class="col-sm-10 col-lg-11 sc-main-content">
-                {% block content_wrapper %}{% block content %}{% endblock %}{% endblock %}
+                {% block content_wrapper %}
+                {% if page.outdated == '1' %}{% include 'outdated.html.twig' %}{% endif %}
+                {% block content %}{% endblock %}
+                {% endblock %}
             </div>
         </div>
     </div>
