Remove about link and add some accessibility fixes

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -47,7 +47,7 @@
         </div>
     </div>
 
-    <footer class="footer-bottom">
+    <footer class="footer-bottom" role="contentinfo">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-xs-12">
