--- a/source/_partials/nav_top.html.twig
+++ b/source/_partials/nav_top.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
             <a href="/doc" class="navbar-brand">
@@ -11,7 +11,7 @@
             </button>
         </div>
         <div class="navbar-collapse collapse" id="navbar-main">
-            <ul class="nav navbar-nav">
+            <ol class="nav navbar-nav">
                 {% for item in page.menu %}
                 {% if item.slug != 'doc' %}
                     <li
@@ -27,17 +27,7 @@
                     </li>
                 {% endif %}
                 {% endfor %}
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li class="{% if page.slug == "about" %}
-                            active
-                        {% endif %}
-                        ">
-                    <a href="" target="_top"><span class="picto-info">
-                        </span>About
-                    </a>
-                </li>
-            </ul>
+            </ol>
         </div>
     </div>
 </nav>
