--- a/source/_partials/nav_vert.html.twig
+++ b/source/_partials/nav_vert.html.twig
@@ -1,5 +1,5 @@
-<nav>
-  <ul class="nav nav-pills nav-stacked">
+<nav role="navigation">
+  <ol class="nav nav-pills nav-stacked" type="a">
 {% for topitem in page.menu %}
 {% if topitem.nav_name == page.top_nav %}
 {% for item in topitem.items %}
@@ -9,5 +9,5 @@
 {% endfor %}
 {% endif %}
 {% endfor %}
-  </ul>
+  </ol>
 </nav>
