--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -7,7 +7,6 @@
     {% block head_meta %}
     <meta name="robots" content="noindex, follow">
     {% endblock %}
-    <link href="{{ site.url }}/components/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css"/>
     <link href="//cdn.nova.scapp.io/css/comstrap.min.css" rel="stylesheet" type="text/css"/>
     <link href="//cdn.nova.scapp.io/css/comstrap-theme.min.css" rel="stylesheet" type="text/css"/>
     <link href="{{ site.url }}/css/style.css" rel="stylesheet" type="text/css"/>
@@ -58,5 +57,6 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="{{ site.url }}/components/jquery/jquery.min.js"><\/script>')</script>
 <script src="http://cdn.nova.scapp.io/js/comstrap.min.js"></script>
+<script src="{{ site.url }}/js/custom.js"></script>
 </body>
 </html>
