--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -59,5 +59,5 @@
     <script src="http://cdn.nova.scapp.io/js/comstrap.min.js"></script>
     <script src="{{ site.url }}/components/highlightjs/highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
-</body>
+q</body>
 </html>
