--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -59,6 +59,6 @@
     <script>window.jQuery || document.write('<script src="{{ site.url }}/components/jquery/jquery.min.js"><\/script>')</script>
     <script src="http://cdn.nova.scapp.io/js/comstrap.min.js"></script>
     <script src="{{ site.url }}/components/highlightjs/highlight.pack.js"></script>
-    <script>hljs.initHighlightingOnLoad(1);</script>
-q</body>
+    <script>hljs.initHighlightingOnLoad();</script>
+</body>
 </html>
