--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -13,7 +13,7 @@
     <link href="{{ site.url }}/css/style.css" rel="stylesheet" type="text/css"/>
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <link rel="icon" type="image/png" href="{{ site.url }}/images/favicon.ico">
     <meta name="mobile-web-app-capable" content="yes">
