--- a/source/css/style.css
+++ b/source/css/style.css
@@ -27,3 +27,8 @@ code {
 .sc-navbar-vert ol:first-child {
     padding: 61px 0 0 0;
 }
+
+.panel .panel-body {
+    /* add more space to panel body, it looks to cramped up */
+    padding: 5px 7px 0 7px;
+}
