--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -52,7 +52,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-xs-12">
-                    {{ "now"|date("Y") }} - Swisscom AG - {{ site.title }}
+                    {{ "now"|date("Y") }} - Swisscom AG - Made with <span class="picto-teddy"></span>
                 </div>
             </div>
         </div>
