Fix comstrap integration
Point to the new comstrap-cdn location.

--- a/source/_partials/nav_top.html.twig
+++ b/source/_partials/nav_top.html.twig
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <a href="/doc" class="navbar-brand">
-                <img src="//cdn.nova.scapp.io/img/sc_logo.png" alt="">
+                <img src="//comstrap-cdn.scapp.io/img/sc_logo.png" alt="">
             </a>
             <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main" aria-expanded="false">
                 <span class="icon-bar"></span>
