--- a/source/_partials/nav_vert.html.twig
+++ b/source/_partials/nav_vert.html.twig
@@ -2,7 +2,7 @@
   <ol class="nav nav-pills nav-stacked" type="a">
 {% for topitem in page.menu %}
 {% if topitem.nav_name == page.top_nav %}
-{% for item in topitem.items|sort %}
+{% for item in topitem.items|sortbyfield('slug') %}
     <li {% if page.slug == item.slug %}class="active"{% endif %}>
         <a href="/{{ item.slug }}">{{ item.title }}</a>
     </li>
